test/negative/t3.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel {| function f (x:float): bool = x = 2 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

(*@ function f ... *)
File "t3.mli", line 11, characters 30-31:
Error: Type mysmatch. Cannot match float with integer
